--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@octokit/rest": "^14.0.9",
-    "args": "^3.0.8",
     "commander": "^2.14.1",
     "fs-extra": "^5.0.0",
-    "inquirer": "^5.1.0",
-    "interactive-cli": "^1.1.2"
+    "inquirer": "^5.1.0"
   }
 }
