--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "commander": "^2.14.1",
     "fs-extra": "^5.0.0",
     "inquirer": "^5.1.0"
+  },
+  "bin": {
+    "github-pr": "./index.js"
   }
 }
