--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   },
   "bin": {
     "github-pr": "./index.js"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/milworm/github-pr.git"
+  },
 }
